students/NikiforovAleksandr/task_02/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app16
  labels:
    org.bstu.student.fullname: "Nikiforov-Alexandr"
    org.bstu.student.id: "220020"
    org.bstu.group: "AS-63"
    org.bstu.variant: "16"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "woqhy"
    org.bstu.student.slug: "as-63-220020-v16"
